# WMB-100K

./: .gitignore  COMPARISON.md  Cargo.toml  README.md
datasets/: all_questions.json  beliefs_values.jsonl  daily_life.jsonl  education_skills.jsonl  finance_goals.jsonl  health_fitness.jsonl  media_taste.jsonl  meta.json  pets_hobbies.jsonl  relationships.jsonl  travel_places.jsonl  work_career.jsonl
documents/: daily_life.txt  economics.txt  history.txt  law.txt  literature.txt  medicine.txt  philosophy.txt  psychology.txt  science.txt  technology.txt
scripts/: adapter_template.py  fetch_deep.py  fetch_docs.py  generate_s6s7.py  generate_v2.py  generate_v2_complete.py  generate_v2_final.py  generate_v2_parta.py  score.py  test_hindsight.py  test_langchain.py  test_mem0.py  test_wme.py
src/: generator.rs  main.rs  runner.rs  scorer.rs  types.rs
src/categories/: beliefs_values.rs  daily_life.rs  education_skills.rs  finance_goals.rs  health_fitness.rs  media_taste.rs  mod.rs  pets_hobbies.rs  relationships.rs  travel_places.rs  work_career.rs
